--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -16,8 +16,12 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/theme": "^2.1.17",
     "dayjs": "^1.11.10",
     "flowbite": "^2.3.0",
+    "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
