Convert question number to pagination query
This improves the flexibility of the questions.
Would not be restricted by the question number sequence, and easier to randomized or have custom ordering in the future

--- a/.hintrc
+++ b/.hintrc
@@ -1,6 +1,14 @@
 {
-  "extends": ["development"],
+  "extends": [
+    "development"
+  ],
   "hints": {
-    "typescript-config/is-valid": "off"
+    "typescript-config/is-valid": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ]
   }
 }
