--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "go build .",
     "dev": "CompileDaemon -command='./backend'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./backend"
   },
   "keywords": [],
   "author": "",
