--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   ],
   "scripts": {
     "dev": "turbo dev",
+    "build": "turbo build",
+    "start": "turbo start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
