--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,9 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
+    "start": {
+      "dependsOn": ["build"]
+    },
     "type-check": {}
   }
 }
