--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "turbo dev",
     "build": "turbo build",
     "start": "turbo start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "turbo test"
   },
   "keywords": [],
   "author": "",
