--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -24,7 +24,8 @@
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
