--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "turbo dev",
     "build": "turbo build",
     "start": "turbo start",
+    "lint": "turbo lint",
     "test": "turbo test",
     "format": "prettier . --write"
   },
