--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -25,7 +25,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-turnstile": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
